# cctv

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  benchmark.sh  car_qdrant.jsonl  docker-compose.yml  file_paths.txt  import_to_qdrant.py  main.py  preprocess.py  pyproject.toml  thai_dict.json
lora_adapter/: adapter_config.json
lora_adapter2/: README.md  adapter_config.json
src/: config.py
src/clients/: __init__.py  qdrant_client.py
src/controllers/: __init__.py  search_controller.py
src/models/: __init__.py  search.py
src/repositories/: vector_repository.py
src/services/: __init__.py  search_service.py
