[project]
name = "cctv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "psycopg>=3.2.12",
    "qdrant-client>=1.15.1",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "pillow>=10.3.0",
    "numpy>=1.24.0",
]
